# chemlab

./: .gitignore  1d_scan_script.py  CMakeLists.txt  README.md  README_zh.md  aimd.ipynb  file_system.py  generate_tddft.ipynb  ml_data.py  modify_inp.py  pyproject.toml  scripts_documents.md  test.py
.ipynb_checkpoints/: aimd-checkpoint.ipynb  generate_tddft-checkpoint.ipynb
C_tem/: spin_adiabatic_state.C  spin_adiabatic_state.h
Experiment/: Organic Chemistry.md  README.md
Scripts/1d_scan/: 1d_scan.py
Scripts/2dscan_test/: qchemfile.py
Scripts/old files/: FCI.py  HF.py
Theoretical Chemistry/: HF.py
Theoretical Chemistry/Bash for opt/: README.md  ZNX-1-R.xyz  ZNX-1-Rcluster1.gjf  ZNX-1-Rcluster2.gjf  ZNX-1-Rcluster3.gjf  ZNX-1-Rcluster4.gjf  ZNX-1-Rcluster5.gjf  ZNX-1-Rcluster6.gjf  ZNX-1-Rcluster7.gjf  ZNX-1-Rcluster8.gjf  ZNX-1-Rcluster9.gjf  ZNX-1-S.xyz  ZNX-1-Scluster1.gjf  ZNX-1-Scluster2.gjf  ZNX-1-Scluster3.gjf  ZNX-1-Scluster4.gjf  ZNX-1-Scluster5.gjf  ZNX-1-Scluster6.gjf  ZNX-1-Scluster7.gjf  ZNX-1.xyz  ZNX-1cluster1.gjf  ZNX-1cluster2.gjf  ZNX-1cluster3.gjf  ZNX-2-R.xyz  ZNX-2-Rcluster1.gjf  ZNX-2-Rcluster2.gjf  ZNX-2-Rcluster3.gjf  ZNX-2-Rcluster4.gjf  ZNX-2-Rcluster5.gjf  ZNX-2-Rcluster6.gjf  ZNX-2-Rcluster7.gjf  ZNX-2-Rcluster8.gjf  ZNX-2-S.xyz  ZNX-2-Scluster1.gjf  ZNX-2-Scluster2.gjf  ZNX-2-Scluster3.gjf  ZNX-2-Scluster4.gjf  ZNX-2-Scluster5.gjf  ZNX-2.xyz  ZNX-2cluster1.gjf  (+14 more)
Theoretical Chemistry/ECD/: A.txt  B.txt  ECDcalculate.py  ECDoriginate.py  ECDout.csv  JB.txt  gau00001_tdsp_ecd.txt  gau00003_tdsp_ecd.txt  gau00004_tdsp_ecd.txt  spectrum_curve.txt  te.py  tran00003_tdsp_ecd.txt  tran00004_tdsp_ecd.txt
Theoretical Chemistry/New bash for opt/: Conversion_Scripts.sh  README.md  extract.py  gjf2xyz.sh  sub.sh
Theoretical Chemistry/Numercial calculation/: Gauss.py
Theoretical Chemistry/article/: find.py  format.py  ori.txt  out.txt
chemlab/: ReadMe.md  __main__.py
chemlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
chemlab/cli/: base.py  (+7 more)
examples/: esp_tddft.out
notebooks/: aimd.ipynb  amber.ipynb  cluster.ipynb  crystal.ipynb  generate_tddft.ipynb  gpr.ipynb  spin_cross_test.ipynb
notes/: Fe-NAT.pptx  Fe-complex.xlsx  GNN Basic.pptx  ML-TDDFT.pptx  Tensornet.pptx  工作簿1.xlsx
util/: 1d_scan_script.py  evaluate.py  file_system.py  ml_data.py  modify_inp.py  script2.py
(+390 files in other folders)
