[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemlab"
version = "0.2.2"
description = "Utilities for Q-Chem workflows"
authors = [
    { name="moriya2524", email="suwako2524@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy","matplotlib"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
chemlab = "chemlab.__main__:main"

run_mecp = "chemlab.scripts.qchem.run_mecp:main"
export_numpy = "chemlab.scripts.ml_data.export_numpy:main"
prepare_tddft_inp = "chemlab.scripts.ml_data.prepare_tddft_inp:main"


