[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemlab"
version = "0.2.2"
description = "Utilities for Q-Chem workflows"
authors = [
    { name="moriya2524", email="suwako2524@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy","matplotlib"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
chemlab = "chemlab.__main__:main"



